# runscript

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  book.toml  build.rs  index.html  print.html  run  searchindex.js  searchindex.json
.github/workflows/: gh-pages.yml
guide/: installation.html  just.html  usage.html
runscript-parse/: Cargo.toml
runscript-parse/src/: ast.rs  lib.rs
src/: SUMMARY.md  config.rs  doubled.lalrpop  err.rs  exec.rs  introduction.md  lexer.rs  lib.rs  main.rs  old_parser.rs  out.rs  parser.lalrpop  parser.rs  process.rs  ptr.rs  runfile.rs  script.rs
src/exec/: glob.rs
src/guide/: installation.md  just.md  usage.md
src/parser/: ast.rs  mod.rs  old.rs  parse.rs  token.rs
src/parser/parse/: iter.rs
src/shell/: ast.rs  mod.rs  parse.rs
src/shell/ast/: builder.rs
src/shell/ast/builder/: default_builder.rs
src/shell/parse/: iter.rs
test/: all_positionals.run  args.run  basic.run  build.run  chars.run  env.run  errfmt.run  error.run  glob.run  include.run  num.run  old.run  parent.run  phases.run  pipe.run  run  source.sh
test/opts/: run
test/subdir/: file.txt
tests/: cli_tests.rs
tests/cli/: list.stderr  list.toml  resolve.stderr  resolve.stdout  resolve.toml
tests/cli/in/: .run  run
