[package]
name = "runscript"
version = "1.0.0-beta.6"
description = "Project script manager and executor"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
repository = "https://github.com/TheOnlyMrCat/runscript"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
edition = "2021"

[[bin]]
name = "run"
path = "src/main.rs"

[features]
default = ["panic-hook"]
panic-hook = ["os_info", "uuid"]
old-parser = []

[dependencies]
atty = "0.2"
cfg-if = "1.0.0"
clap = { version = "3.1", features = ["derive"] }
exitcode = "1.1"
glob = "0.3.0"
indexmap = "1.7"
itertools = "0.10.1"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
termcolor = "1.1"
toml = "0.5.8"

# Panic hook dependencies
os_info = { version = "3.2", optional = true }
uuid = { version = "0.8", features = ["v4"], default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3"

[target.'cfg(unix)'.dependencies]
nix = "0.23"
