[package]
name = "runscript"
version = "1.0.0-beta.7"
description = "Project script manager and executor"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
repository = "https://github.com/TheOnlyMrCat/runscript"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"

[[bin]]
name = "run"
path = "src/main.rs"

[features]
default = ["panic-hook"]
panic-hook = ["os_info", "uuid"]
old-parser = []

[dependencies]
atty = "0.2.14"
cfg-if = "1.0.0"
clap = { version = "4.0.9", features = ["derive"] }
exitcode = "1.1.2"
glob = "0.3.0"
indexmap = "1.9.1"
itertools = "0.10.5"
serde = { version = "1.0.145", features = ["derive"] }
tempfile = "3.3.0"
termcolor = "1.1.3"
toml = "0.5.9"

# [feature = "panic-hook"]
os_info = { version = "3.5.1", optional = true }
uuid = { version = "1.1.2", features = ["v4"], default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
nix = "0.25.0"

[dev-dependencies]
trycmd = "0.14.4"
