[package]
name = "runscript"
version = "1.0.0-beta.7"
description = "Project script manager and executor"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities", "development-tools::build-utils"]
repository = "https://github.com/TheOnlyMrCat/runscript"
authors = ["TheOnlyMrCat <skylifegame@gmail.com>"]
edition = "2021"

[profile.dev]
split-debuginfo = "unpacked"

[[bin]]
name = "run"
path = "src/main.rs"

[features]
default = ["panic-hook"]
panic-hook = ["os_info", "uuid"]
old-parser = []

[dependencies]
runscript-parse = { path = "runscript-parse" }

cfg-if = "1.0.0"
clap = { version = "4.1.7", features = ["derive"] }
exitcode = "1.1.2"
glob = "0.3.1"
indexmap = "1.9.2"
itertools = "0.10.5"
is-terminal = "0.4.4"
serde = { version = "1.0.152", features = ["derive"] }
tempfile = "3.4.0"
termcolor = "1.2.0"
toml = "0.7.2"

# [feature = "panic-hook"]
os_info = { version = "3.6.0", optional = true }
uuid = { version = "1.3.0", features = ["v4"], default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
nix = "0.26.2"

[dev-dependencies]
trycmd = "0.14.12"

[workspace]
members = ["runscript-parse"]
